# bunty.ai

./: .gitignore  README.md  pyproject.toml
bforbuntyai/: __init__.py  _base.py  _logging.py  _utils.py  auth.py
bforbuntyai/datasets/: __init__.py  _base.py  cifar.py  custom.py  huggingface.py  mnist.py  pix2pix.py
bforbuntyai/models/: __init__.py  autoencoder.py  conditional_gan.py  dcgan.py  ethical_evaluator.py  gan.py  image_captioner.py  pix2pix.py  stable_diffusion.py  text_finetuner.py  text_generator.py  vae.py
examples/: example_autoencoder.py  example_diffusion_multimodal.py  example_ethical_eval.py  example_gan.py  example_pix2pix.py  example_text_generation.py
tests/: test_autoencoder.py  test_datasets.py  test_gan.py  test_logging_metrics.py  test_text_models.py  test_universal_models.py  test_vae.py
